# rawos

./: .gitignore  CHANGELOG.md  CHECKPOINT.md  CONTRIBUTING.md  DELTA.md  Dockerfile  LICENSE  Makefile  PLAN.md  README.md  SECURITY.md  docker-compose.yml  fix_app.py  pyproject.toml
anima/: auth.py  config.py  monitoring.py
docs/: MASTER_PLAN.md  phase22_pam_invariants.md  phase22_pam_safety_floor.md
migrations/: 001_initial.sql  002_phase5.sql  004_context_inference.sql  005_evaluation.sql  006_dataset.sql  007_timing.sql  008_study.sql  009_rich_context.sql  010_proactive_action_type.sql  011_universal_context.sql  012_push_devices.sql  013_proactive_tool_calls.sql  014_rawos_commits.sql  015_proactive_tool_calls_agent_id.sql  016_episodic_memory.sql  020_last_chat_at.sql  022_operator_track_record.sql  023_managed_file_targets.sql  024_managed_service_targets.sql  025_managed_pam_targets.sql  027_self_reload_autonomous.sql  028_owned_resource_history.sql  029_venv_operator_history.sql  030_managed_unit_targets.sql  postgres_schema.sql
rawos/: auth.py  billing.py  config.py  monitoring.py
rawos.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: migrate_sqlite_to_postgres.py  reset_daily_budgets.py  shp_verify_baseline.sh  unit_topology_boot_deadman.sh
tests/: cleanup_load_test.py  conftest.py  locustfile.py  setup_load_test.py  test_api.py  test_arch_detect.py  test_arch_file_operator.py  test_arch_get_arch.py  test_arch_get_arch_crash_reporter.py  test_arch_get_arch_macos.py  test_arch_kernel_observer.py  test_arch_linux_crash_reporter.py  test_arch_linux_log_reader.py  test_arch_linux_resource_probe.py  test_arch_linux_service_manager.py  test_arch_linux_shell_policy.py  test_arch_macos_crash_reporter.py  test_arch_macos_log_reader.py  test_arch_macos_resource_probe.py  test_arch_macos_service_manager.py  test_arch_macos_shell_policy.py  test_arch_service_ops.py  test_arch_windows_crash_reporter.py  test_arch_wiring_rawos_source_root.py  test_arch_wiring_readonly_whitelist.py  test_arch_wiring_resource_probe.py  test_arch_wiring_reversible_apply.py  test_arch_wiring_service_and_logs.py  test_arch_wiring_shell_policy.py  test_arch_wiring_worktree_config.py  test_audit_chain.py  test_billing_stripe.py  test_billing_usage_breakdown.py  test_boot_commit_track_record.py  test_capability_gate.py  test_cli_chat.py  test_context_routes.py  test_frontdoor_linux.py  test_frontdoor_policy.py  (+41 more)
(+212 files in other folders)
