[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rawos"
version = "0.6.0"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-multipart>=0.0.12",
    "sse-starlette>=2.1",
    # Auth
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.2",
    # HTTP clients
    "httpx>=0.28",
    "aiohttp>=3.9",
    # Async / file IO
    "aiofiles>=24.1",
    "watchdog>=4.0",
    # Observability
    "prometheus-client>=0.21",
    # AI / ML
    "sentence-transformers>=3.3",
    "chromadb>=0.6",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    # Telegram integration
    "python-telegram-bot>=22.8",
    # AI gateway
    "openai>=2.41",
    # CLI
    "click>=8.1",
    "rich>=13.0",
    # Billing (lazy-imported; required at deploy time)
    "stripe>=10.0",
    # Rate-limit backing store (lazy-imported; required at deploy time)
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "pytest-cov>=6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "self_reload_smoke: fast critical-path subset run by self_reload.preflight_stage (Phase 25 Stage 1)",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rawos*"]

[project.scripts]
rawos = "rawos.cli.main:main"
rawos-frontdoor = "rawos.cli.frontdoor_entry:main"
